<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_impedance_controller</name>
  <version>0.0.2</version>
  <description>Robot impedance controller designed with the ros2_controllers framework and DART.</description>
  <maintainer email="44267124+qleonardolp@users.noreply.github.com">Leonardo F. dos Santos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros2_control_cmake</build_depend>

  <depend>backward_ros</depend>
  <depend>controller_interface</depend>
  <depend>ros_gz_sim</depend> <!-- for dart -->
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>generate_parameter_library</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
